[package]
name = "rustenstein_3d"
version = "0.1.0"
edition = "2021"
authors = [
  "Jeremy Letang <letang.jeremy@gmail.com>",
  "Naimul Hoque <Naimul.Hoque@outlook.com>",
]

[profile.performance]
inherits = "release"
opt-level = 3
lto = "fat"
incremental = true

[dependencies]
rsfml = { version = "0.16.0", package = "sfml" }
structopt = { version = "0.3.25" }
