[package]
name = "rustenstein_3d"
version = "0.1.0"
edition = "2021"
authors = [
  "Jeremy Letang <letang.jeremy@gmail.com>",
  "Naimul Hoque <Naimul.Hoque@outlook.com>",
]

[profile.performance]
inherits = "release"
opt-level = 3
lto = "fat"
incremental = true
panic = "abort"

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
rsfml = { version = "0.16.0", package = "sfml" }
